Fix alignment of header titles.

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -47,6 +47,7 @@ h2 {
 
 .header h1, .header h2 {
     font-weight: bold;
+    text-align: left;
 }
 
 .footer {
